# 1

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CTAFormSection.jsx  Footer.jsx  HeroVideo.jsx  Navbar.jsx  OPTIMAL_STATE_ROADMAP.md  README.md  globals.css  layout.jsx  next.config.js  package-lock.json  package.json  page.jsx  playwright.config.js  playwright.config.ts  pyproject.toml  requirements.txt  system_prompt.md  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tool_harvest_request.yml
.github/workflows/: ci.yml  harvest-scheduled.yml
app/: layout.jsx  page.jsx
app/analytics/: page.jsx
app/tools/: page.jsx
components/: CTAFormSection.jsx  FilterSidebar.jsx  Footer.jsx  HeroVideo.jsx  Navbar.jsx  ProofSection.jsx  SearchBar.jsx  StickyNav.jsx  ThemeToggle.jsx  ToolCard.jsx  TrackingPixel.jsx
config/: sources.yaml
data/: mockTools.js
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  FEATURES.md  GUARDRAILS.md  ROADMAP.md  TECH_STACK.md
docs/adr/: 0001-mcp-proxy-pattern.md  (+3 more)
lib/: proof-data.js
mcp_server/: __init__.py  cli.py  code_generator.py  database.py  execute_server.py  logging_config.py  models.py  server.py  tui.py  vector_store.py
tests/: test_admin_approval.py  test_code_generator.py  test_crawler.py  test_deduper.py  test_execution.py  test_logging.py  test_template_substitution.py  test_toolbank.py  test_tui.py
toolbank_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+36 files in other folders)
